--- a/index.html
+++ b/index.html
@@ -1,94 +1,104 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <title>জামিউল উলূম কওমী মাদ্রাসা</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background: #eef2f3;
-            margin: 0;
-            padding: 0;
-        }
-        .header {
-            background: #0a3d62;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            margin-top: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h2 {
-            color: #0a3d62;
-        }
-        ul {
-            padding-left: 20px;
-            line-height: 1.8;
-        }
-        .address {
-            background: #f1f2f6;
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 20px;
-            border-left: 5px solid #0a3d62;
-        }
-        footer {
-            text-align: center;
-            padding: 15px;
-            margin-top: 20px;
-            background: #0a3d62;
-            color: white;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>জামিউল উলূম কওমী মাদ্রাসা</title>
+<style>
+    body {
+        margin: 0;
+        font-family: "SolaimanLipi", sans-serif;
+        background-color: #f2f6f6;
+    }
+
+    header {
+        background: #0a3d62;
+        color: white;
+        text-align: center;
+        padding: 30px 10px;
+        font-size: 26px;
+        font-weight: bold;
+        letter-spacing: 1px;
+    }
+
+    .subtitle {
+        font-size: 16px;
+        margin-top: 5px;
+        font-weight: normal;
+    }
+
+    .container {
+        width: 90%;
+        margin: auto;
+        margin-top: 25px;
+    }
+
+    .box {
+        background: white;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    .box h2 {
+        margin-top: 0;
+        color: #0a3d62;
+        border-left: 5px solid #0a3d62;
+        padding-left: 10px;
+    }
+
+    footer {
+        background: #0a3d62;
+        padding: 15px;
+        color: white;
+        text-align: center;
+        margin-top: 30px;
+    }
+</style>
 </head>
 <body>
 
-    <div class="header">
-        <h1>জামিউল উলূম কওমী মাদ্রাসা</h1>
-        <p>নূরানী • নাজেরা • হিফজ • তাইসির • দাওরায়ে হাদীস</p>
+<header>
+    জামিউল উলূম কওমী মাদ্রাসা
+    <div class="subtitle">
+        নূরানী • নাজেরা • হিফজ • তাইসির • দাওরায়ে হাদীস
     </div>
+</header>
 
-    <div class="container">
+<div class="container">
 
+    <div class="box">
         <h2>প্রতিষ্ঠান পরিচিতি</h2>
         <p>
-            জামিউল উলূম কওমী মাদ্রাসা—নূরানী, নাজেরা, হিফজ, তাইসির ও দাওরায়ে হাদীস পর্যন্ত
-            পূর্ণাঙ্গ ইসলামী শিক্ষা প্রদান করে থাকে। এখানে অভিজ্ঞ উস্তাদদের তত্ত্বাবধানে
-            ছাত্রদের আকিদা, চরিত্র গঠন ও নৈতিক উন্নতির বিশেষ ব্যবস্থা রয়েছে।
+            জামিউল উলূম কওমী মাদ্রাসা—নূরানী, নাজেরা, হিফজ, তাইসির ও দাওরায়ে হাদীস পর্যন্ত পূর্ণাঙ্গ ইসলামী শিক্ষা প্রদান করে থাকে।
+            এখানে অভিজ্ঞ শিক্ষকদের তত্ত্বাবধানে ছাত্রদের আকিদা, চরিত্র গঠন ও দ্বীনি শিক্ষা বিষয়ে বিশেষ ব্যবস্থা রয়েছে।
         </p>
+    </div>
 
+    <div class="box">
         <h2>আমাদের বিভাগসমূহ</h2>
         <ul>
             <li>নূরানী বিভাগ</li>
-            <li>নাজেরা (কুরআন শিক্ষার বুনিয়াদি ধাপ)</li>
-            <li>হিফজুল কুরআন</li>
+            <li>নাজেরা বিভাগ</li>
+            <li>হিফজ বিভাগ</li>
             <li>তাইসির ও উচ্চ কিতাব বিভাগ</li>
             <li>দাওরায়ে হাদীস (সর্বোচ্চ জামাত)</li>
-            <li>হোস্টেল ব্যবস্থা</li>
+            <li>হোস্টেল সুবিধা</li>
         </ul>
-
-        <div class="address">
-            <h2>ঠিকানা</h2>
-            <p>
-                মাওনা থেকে ভিতরে,  
-                টেংরা বাজার,  
-                ডিবার পুকুরপার,  
-                শ্রীপুর, গাজীপুর।
-            </p>
-        </div>
-
     </div>
 
-    <footer>
-        © জামিউল উলূম কওমী মাদ্রাসা, শ্রীপুর, গাজীপুর
-    </footer>
+    <div class="box">
+        <h2>ঠিকানা</h2>
+        <p>
+            মাওনা থেকে ভিতরে, টেংরা বাজার, ডিবার পুকুরপাড়, শ্রীপুর, গাজীপুর।
+        </p>
+    </div>
+
+</div>
+
+<footer>
+    © জামিউল উলূম কওমী মাদ্রাসা, শ্রীপুর, গাজীপুর
+</footer>
 
 </body>
 </html>
