--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@
 
     </div>
 
+</div> <div class="card">
+    <h2>দাওরায়ে হাদীস ফারেগিন ছাত্রদের স্মৃতিময় উপদেশ</h2>
+    <p>
+     দাওরায়ে হাদীসের শেষ প্রহরগুলো যেন অতীতে ফেলে আসা কোন স্বপ্নভূমির দরজার কাছে দাঁড় করিয়ে দেয় আমাকে। বছরের পর বছর যে মেঘমালা-সদৃশ দিনগুলোকে আমরা ছায়ার মতো অনুসরণ করেছি—সুবহে সাদিকের আলো গায়ে মেখে ক্লাসের দিকে ছুটেছি, উস্তাযদের নূরানী কণ্ঠে হাদীসের সুর শুনেছি, আর ফজিলতের শব্দে হৃদয় ভিজিয়েছি—আজ সেই শব্দগুলো যেন দূর স্মৃতির মৃদু প্রতিধ্বনি।
+
+এ বিদায়ের পথে দাঁড়িয়ে সবচেয়ে বেশি মনে পড়ে আমাদের উস্তাযগণকে। তাঁদের প্রতিটি দৃষ্টি, প্রতিটি পরামর্শ, প্রতিটি দরদের কথা ছিল আমাদের জীবনের মানচিত্র। তাঁরা শুধু হাদীস শেখাননি—শেখিয়েছেন কীভাবে হাদীসের আলোকে বাঁচতে হয়, চলতে হয়, মানুষ হতে হয়। উস্তাযের চোখে সন্তুষ্টির একটুকরো ঝিলিক ছিল আমাদের সবচেয়ে বড় সনদ।
+
+আর মনে পড়ে সহপাঠীদের। দিন-রাতের সাথী। কখনো আলোচনা, কখনো মতবিরোধ, কখনো হাসির রোল—সবকিছু মিলিয়ে এক অটুট বন্ধন। দাওরার এই সফর আমাদের একে অপরের হৃদয়ের ভেতর এমনভাবে লিখে দিয়েছে যে এই স্মৃতি সময়ের ধারাল পাথরেও ক্ষয় হবে না।
+
+বিদায় আসলে একটি সূচনা। দাওরায়ে হাদীস শেষ মানে জ্ঞানসফরের শেষ নয়; বরং হাদীসের আমানত বহন করার মহত্তর এক দায়িত্বের শুরু। আজ আমরা বিদায় নিচ্ছি মাদ্রাসার চৌহদ্দি থেকে, কিন্তু রাসূলুল্লাহ ﷺ–এর বাণীকে হৃদয়ে ধারণ করে এক নতুন যাত্রায় পা দিচ্ছি।
+
+এই স্মৃতিগুলো আমাদের জীবনের সবচেয়ে পবিত্র, সবচেয়ে নির্মল অধ্যায় হয়ে থাকবে। হয়তো আমরা সময়ের স্রোতে ভিন্ন ভিন্ন পথে ছড়িয়ে যাব, কিন্তু দাওরায়ে হাদীসের এই বিদায়ী মুহূর্ত আমাদেরকে এক অদৃশ্য সূত্রে চিরকাল একসাথে বেঁধে রাখবে।
+
+আল্লাহ তাআলা আমাদের এই বিদায়কে নতুন ইলমি জীবনের অনুপ্রেরণা বানিয়ে দিন—আর হাদীসের ছায়াতলে আমাদের পদক্ষেপগুলো সবসময় রাখুন। আমীন।
+
+এটা দাওরা হাদিসের সবার পক্ষ থেকে স্মৃতির ডায়েরির মধ্যে দেওয়া হবে তুমি চাইনা আরেকটু সুন্দর করে সাজিয়ে দাও যেন সব জায়গায় গ্রহণযোগ্য হয়   ।
+    </p>
 </div>
 
 <footer>
