--- a/index.html
+++ b/index.html
@@ -152,10 +152,17 @@
 
     </div>
 
-</div> <div class="card">
-    <h2>দাওরায়ে হাদীস ফারেগিন ছাত্রদের স্মৃতিময় উপদেশ</h2>
-    <p>
-     দাওরায়ে হাদীসের শেষ প্রহরগুলো যেন অতীতে ফেলে আসা কোন স্বপ্নভূমির দরজার কাছে দাঁড় করিয়ে দেয় আমাকে। বছরের পর বছর যে মেঘমালা-সদৃশ দিনগুলোকে আমরা ছায়ার মতো অনুসরণ করেছি—সুবহে সাদিকের আলো গায়ে মেখে ক্লাসের দিকে ছুটেছি, উস্তাযদের নূরানী কণ্ঠে হাদীসের সুর শুনেছি, আর ফজিলতের শব্দে হৃদয় ভিজিয়েছি—আজ সেই শব্দগুলো যেন দূর স্মৃতির মৃদু প্রতিধ্বনি।
+</div> 
+  ।<div class="card">
+    <h2>দাওরায়ে হাদীস ফারেগিনদের স্মৃতিময় উপদেশ</h2>
+
+    <div style="
+        white-space: pre-line;
+        font-size: 16px;
+        line-height: 1.7;
+        text-align: justify;
+    ">
+        দাওরায়ে হাদীসের শেষ প্রহরগুলো যেন অতীতে ফেলে আসা কোন স্বপ্নভূমির দরজার কাছে দাঁড় করিয়ে দেয় আমাকে। বছরের পর বছর যে মেঘমালা-সদৃশ দিনগুলোকে আমরা ছায়ার মতো অনুসরণ করেছি—সুবহে সাদিকের আলো গায়ে মেখে ক্লাসের দিকে ছুটেছি, উস্তাযদের নূরানী কণ্ঠে হাদীসের সুর শুনেছি, আর ফজিলতের শব্দে হৃদয় ভিজিয়েছি—আজ সেই শব্দগুলো যেন দূর স্মৃতির মৃদু প্রতিধ্বনি।
 
 এ বিদায়ের পথে দাঁড়িয়ে সবচেয়ে বেশি মনে পড়ে আমাদের উস্তাযগণকে। তাঁদের প্রতিটি দৃষ্টি, প্রতিটি পরামর্শ, প্রতিটি দরদের কথা ছিল আমাদের জীবনের মানচিত্র। তাঁরা শুধু হাদীস শেখাননি—শেখিয়েছেন কীভাবে হাদীসের আলোকে বাঁচতে হয়, চলতে হয়, মানুষ হতে হয়। উস্তাযের চোখে সন্তুষ্টির একটুকরো ঝিলিক ছিল আমাদের সবচেয়ে বড় সনদ।
 
@@ -167,7 +174,9 @@
 
 আল্লাহ তাআলা আমাদের এই বিদায়কে নতুন ইলমি জীবনের অনুপ্রেরণা বানিয়ে দিন—আর হাদীসের ছায়াতলে আমাদের পদক্ষেপগুলো সবসময় রাখুন। আমীন।
 
-এটা দাওরা হাদিসের সবার পক্ষ থেকে স্মৃতির ডায়েরির মধ্যে দেওয়া হবে তুমি চাইনা আরেকটু সুন্দর করে সাজিয়ে দাও যেন সব জায়গায় গ্রহণযোগ্য হয়   ।
+    </div>
+
+  </div>
     </p>
 </div>
 
