--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
 
 আল্লাহ তাআলা আমাদের এই বিদায়কে নতুন ইলমি জীবনের অনুপ্রেরণা বানিয়ে দিন—আর হাদীসের ছায়াতলে আমাদের পদক্ষেপগুলো সবসময় রাখুন। আমীন।
 
+    </div> <div class="card">
+    <h2>দাওরায়ে হাদিস ফারেগিন ছাত্রদের স্মৃতির ডায়েরি – ২০২৫</h2>
+
+    <img src="IMG-20251206-WA0013.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0025.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0016.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0024.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0017.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0015.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0018.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0022.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0019.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+    <img src="IMG-20251206-WA0020.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+
     </div>
 
   </div>
