--- a/index.html
+++ b/index.html
@@ -89,7 +89,46 @@
     <small>جامعة العلوم القومية تنغرا</small>
     <small>من الحضانة إلى دراية الحديث — تعليم صحيح على منهج السلف</small>
 </header>
-<
+<<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Madrasah Photo</title>
+
+    <style>
+        body {
+            background: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        .photo-box {
+            width: 90%;
+            max-width: 700px;
+            margin: auto;
+            background: #fff;
+            padding: 15px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        }
+
+        img {
+            width: 100%;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="photo-box">
+        <img src="madrasah.jpg" alt="Madrasah Photo">
+    </div>
+
+</body>
+</html>
 
     <!-- পরিচিতি -->
     <div class="card">
