--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madrasah Photo</title>
+    <title>/
 
     <style>
         body {
