--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <meta name="keywords" content="জামিউল উলূম কওমী মাদ্রাসা টেংরা, কওমী মাদ্রাসা গাজীপুর, মাদ্রাসা শ্রীপুর, টেংরা বাজার মাদ্রাসা, কওমী হিফজ মাদ্রাসা, নূরানী মাদ্রাসা">
 <meta name="robots" content="index, follow">
 
-<!-- Open Graph -->
 <meta property="og:title" content="জামিউল উলূম কওমী মাদ্রাসা টেংরা">
 <meta property="og:description" content="শ্রীপুর, গাজীপুরের অন্যতম কওমী মাদ্রাসা। নূরানী থেকে দাওরায়ে হাদীস পর্যন্ত।">
 <meta property="og:type" content="website">
@@ -79,6 +78,24 @@
         background: #e9fafa;
         font-weight: bold;
     }
+
+    /* নতুন যুক্ত CSS */
+    .photo-box {
+        width: 90%;
+        max-width: 700px;
+        margin: auto;
+        background: #fff;
+        padding: 15px;
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        text-align: center; /* ভেতরের কন্টেন্ট সেন্টারে আনার জন্য */
+        margin-bottom: 20px; /* নিচের কার্ড থেকে দূরত্ব */
+    }
+
+    .photo-box img {
+        width: 100%;
+        border-radius: 10px;
+    }
 </style>
 </head>
 
@@ -89,48 +106,14 @@
     <small>جامعة العلوم القومية تنغرا</small>
     <small>من الحضانة إلى دراية الحديث — تعليم صحيح على منهج السلف</small>
 </header>
-<<!DOCTYPE html>
-<html lang="bn">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>/
 
-    <style>
-        body {
-            background: #f0f0f0;
-            margin: 0;
-            padding: 20px;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-
-        .photo-box {
-            width: 90%;
-            max-width: 700px;
-            margin: auto;
-            background: #fff;
-            padding: 15px;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-        }
-
-        img {
-            width: 100%;
-            border-radius: 10px;
-        }
-    </style>
-</head>
-<body>
+<div class="container">
 
     <div class="photo-box">
         <img src="madrasah.jpg" alt="Madrasah Photo">
     </div>
 
-</body>
-</html>
 
-    <!-- পরিচিতি -->
     <div class="card">
         <h2>প্রতিষ্ঠান পরিচিতি</h2>
         <p>
@@ -140,7 +123,6 @@
         </p>
     </div>
 
-    <!-- বিভাগসমূহ (ফিকহে বিভাগ মুছে দেওয়া হয়েছে) -->
     <div class="card">
         <h2>আমাদের বিভাগসমূহ</h2>
         <ul>
@@ -152,7 +134,6 @@
         </ul>
     </div>
 
-    <!-- শিক্ষক তালিকা (ছবির তথ্য অনুযায়ী নাম ও নম্বর ঠিক করে দেওয়া) -->
     <div class="card">
         <h2>শিক্ষক ও স্টাফ তালিকা</h2>
 
@@ -164,8 +145,7 @@
                 <th>মোবাইল</th>
             </tr>
 
-            <tr><td>১</td><td>ওস্তাদবৃন্দ 
-শায়েখ হাবিবুল্লাহ আশেকী</td><td>/ মুহতামিম (ভারপ্রাপ্ত)</td><td>০১৭৩৬৫৮৬৩৭৭</td></tr>
+            <tr><td>১</td><td>ওস্তাদবৃন্দ শায়েখ হাবিবুল্লাহ আশেকী</td><td>মুহতামিম (ভারপ্রাপ্ত)</td><td>০১৭৩৬৫৮৬৩৭৭</td></tr>
             <tr><td>২</td><td>শায়েখ মুফতি ওবায়দুল্লাহ</td><td>শায়খুল হাদীস ও অত্র মাদরাসা</td><td>০১৭৩২৪৩৬৩৪০</td></tr>
             <tr><td>৩</td><td>মুফতি হারুনুর রশীদ খান</td><td>শায়খে সানি অত্র মাদ্রাসা</td><td>০১৯১৮৮৪৮৮৯০</td></tr>
             <tr><td>৪</td><td>মুফতি জহিরুল ইসলাম</td><td>সিনিয়র মুহাদ্দিস</td><td>০১৭৩৪৫২৪৪১৩</td></tr>
@@ -185,52 +165,48 @@
             <tr><td>১৮</td><td>মাযহার সিয়াম</td><td>মাঠার</td><td>০১৭৩০৩০৫৩৫২</td></tr>
             <tr><td>১৯</td><td>জান্নাত আবুল হাশেম</td><td>বারুচ</td><td>০১৭১৬৯৯১২৪০</td></tr>
             <tr><td>২০</td><td>জান্নাত নাইম</td><td>বারুচ</td><td>—</td></tr>
-
         </table>
+    </div>
 
+    <div class="card">
+        <h2>দাওরায়ে হাদীস ফারেগিনদের স্মৃতিময় উপদেশ</h2>
+
+        <div style="
+            white-space: pre-line;
+            font-size: 16px;
+            line-height: 1.7;
+            text-align: justify;
+        ">
+            দাওরায়ে হাদীসের শেষ প্রহরগুলো যেন অতীতে ফেলে আসা কোন স্বপ্নভূমির দরজার কাছে দাঁড় করিয়ে দেয় আমাকে। বছরের পর বছর যে মেঘমালা-সদৃশ দিনগুলোকে আমরা ছায়ার মতো অনুসরণ করেছি—সুবহে সাদিকের আলো গায়ে মেখে ক্লাসের দিকে ছুটেছি, উস্তাযদের নূরানী কণ্ঠে হাদীসের সুর শুনেছি, আর ফজিলতের শব্দে হৃদয় ভিজিয়েছি—আজ সেই শব্দগুলো যেন দূর স্মৃতির মৃদু প্রতিধ্বনি।
+
+            এ বিদায়ের পথে দাঁড়িয়ে সবচেয়ে বেশি মনে পড়ে আমাদের উস্তাযগণকে। তাঁদের প্রতিটি দৃষ্টি, প্রতিটি পরামর্শ, প্রতিটি দরদের কথা ছিল আমাদের জীবনের মানচিত্র। তাঁরা শুধু হাদীস শেখাননি—শেখিয়েছেন কীভাবে হাদীসের আলোকে বাঁচতে হয়, চলতে হয়, মানুষ হতে হয়। উস্তাযের চোখে সন্তুষ্টির একটুকরো ঝিলিক ছিল আমাদের সবচেয়ে বড় সনদ।
+
+            আর মনে পড়ে সহপাঠীদের। দিন-রাতের সাথী। কখনো আলোচনা, কখনো মতবিরোধ, কখনো হাসির রোল—সবকিছু মিলিয়ে এক অটুট বন্ধন। দাওরার এই সফর আমাদের একে অপরের হৃদয়ের ভেতর এমনভাবে লিখে দিয়েছে যে এই স্মৃতি সময়ের ধারাল পাথরেও ক্ষয় হবে না।
+
+            বিদায় আসলে একটি সূচনা। দাওরায়ে হাদীস শেষ মানে জ্ঞানসফরের শেষ নয়; বরং হাদীসের আমানত বহন করার মহত্তর এক দায়িত্বের শুরু। আজ আমরা বিদায় নিচ্ছি মাদ্রাসার চৌহদ্দি থেকে, কিন্তু রাসূলুল্লাহ ﷺ–এর বাণীকে হৃদয়ে ধারণ করে এক নতুন যাত্রায় পা দিচ্ছি।
+
+            এই স্মৃতিগুলো আমাদের জীবনের সবচেয়ে পবিত্র, সবচেয়ে নির্মল অধ্যায় হয়ে থাকবে। হয়তো আমরা সময়ের স্রোতে ভিন্ন ভিন্ন পথে ছড়িয়ে যাব, কিন্তু দাওরায়ে হাদীসের এই বিদায়ী মুহূর্ত আমাদেরকে এক অদৃশ্য সূত্রে চিরকাল একসাথে বেঁধে রাখবে।
+
+            আল্লাহ তাআলা আমাদের এই বিদায়কে নতুন ইলমি জীবনের অনুপ্রেরণা বানিয়ে দিন—আর হাদীসের ছায়াতলে আমাদের পদক্ষেপগুলো সবসময় রাখুন। আমীন।
+        </div>
+    </div>
+
+    <div class="card">
+        <h2>দাওরায়ে হাদিস ফারেগিন ছাত্রদের স্মৃতির ডায়েরি – ২০২৫</h2>
+
+        <img src="IMG-20251206-WA0013.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0025.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0016.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0024.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0017.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0015.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0018.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0022.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0019.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
+        <img src="IMG-20251206-WA0020.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
     </div>
 
 </div> 
-  ।<div class="card">
-    <h2>দাওরায়ে হাদীস ফারেগিনদের স্মৃতিময় উপদেশ</h2>
-
-    <div style="
-        white-space: pre-line;
-        font-size: 16px;
-        line-height: 1.7;
-        text-align: justify;
-    ">
-        দাওরায়ে হাদীসের শেষ প্রহরগুলো যেন অতীতে ফেলে আসা কোন স্বপ্নভূমির দরজার কাছে দাঁড় করিয়ে দেয় আমাকে। বছরের পর বছর যে মেঘমালা-সদৃশ দিনগুলোকে আমরা ছায়ার মতো অনুসরণ করেছি—সুবহে সাদিকের আলো গায়ে মেখে ক্লাসের দিকে ছুটেছি, উস্তাযদের নূরানী কণ্ঠে হাদীসের সুর শুনেছি, আর ফজিলতের শব্দে হৃদয় ভিজিয়েছি—আজ সেই শব্দগুলো যেন দূর স্মৃতির মৃদু প্রতিধ্বনি।
-
-এ বিদায়ের পথে দাঁড়িয়ে সবচেয়ে বেশি মনে পড়ে আমাদের উস্তাযগণকে। তাঁদের প্রতিটি দৃষ্টি, প্রতিটি পরামর্শ, প্রতিটি দরদের কথা ছিল আমাদের জীবনের মানচিত্র। তাঁরা শুধু হাদীস শেখাননি—শেখিয়েছেন কীভাবে হাদীসের আলোকে বাঁচতে হয়, চলতে হয়, মানুষ হতে হয়। উস্তাযের চোখে সন্তুষ্টির একটুকরো ঝিলিক ছিল আমাদের সবচেয়ে বড় সনদ।
-
-আর মনে পড়ে সহপাঠীদের। দিন-রাতের সাথী। কখনো আলোচনা, কখনো মতবিরোধ, কখনো হাসির রোল—সবকিছু মিলিয়ে এক অটুট বন্ধন। দাওরার এই সফর আমাদের একে অপরের হৃদয়ের ভেতর এমনভাবে লিখে দিয়েছে যে এই স্মৃতি সময়ের ধারাল পাথরেও ক্ষয় হবে না।
-
-বিদায় আসলে একটি সূচনা। দাওরায়ে হাদীস শেষ মানে জ্ঞানসফরের শেষ নয়; বরং হাদীসের আমানত বহন করার মহত্তর এক দায়িত্বের শুরু। আজ আমরা বিদায় নিচ্ছি মাদ্রাসার চৌহদ্দি থেকে, কিন্তু রাসূলুল্লাহ ﷺ–এর বাণীকে হৃদয়ে ধারণ করে এক নতুন যাত্রায় পা দিচ্ছি।
-
-এই স্মৃতিগুলো আমাদের জীবনের সবচেয়ে পবিত্র, সবচেয়ে নির্মল অধ্যায় হয়ে থাকবে। হয়তো আমরা সময়ের স্রোতে ভিন্ন ভিন্ন পথে ছড়িয়ে যাব, কিন্তু দাওরায়ে হাদীসের এই বিদায়ী মুহূর্ত আমাদেরকে এক অদৃশ্য সূত্রে চিরকাল একসাথে বেঁধে রাখবে।
-
-আল্লাহ তাআলা আমাদের এই বিদায়কে নতুন ইলমি জীবনের অনুপ্রেরণা বানিয়ে দিন—আর হাদীসের ছায়াতলে আমাদের পদক্ষেপগুলো সবসময় রাখুন। আমীন।
-
-    </div> <div class="card">
-    <h2>দাওরায়ে হাদিস ফারেগিন ছাত্রদের স্মৃতির ডায়েরি – ২০২৫</h2>
-
-    <img src="IMG-20251206-WA0013.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0025.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0016.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0024.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0017.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0015.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0018.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0022.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0019.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-    <img src="IMG-20251206-WA0020.jpg" style="width:100%; margin-top:10px; border-radius:10px;">
-
-    </div>
-
-  </div>
-    </p>
-</div>
 
 <footer>
     © জামিউল উলূম কওমী মাদ্রাসা টেংরা — শ্রীপুর, গাজীপুর।
@@ -238,3 +214,4 @@
 
 </body>
 </html>
+
