--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 
     <div class="photo-box">
         <img src="madrasah.jpg" alt="Madrasah Photo">
-    </div>
+    </div><img src="test.jpg" alt="Test Image">
+    
 
 
     <div class="card">
