--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="container">
 
     <div class="photo-box">
-        <img src="madrasah.jpg" alt="Madrasah Photo">
+        <img src="madrasah.jpg" alt=" بسم الله الرحمن الرحيم ✅">
     </div><img src="test.jpg" alt="Test Image">
     
 
